# FINM32500-Assignment-5

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtester/: broker.py  engine.py  price_loader.py  strategy.py
src/backtester/: __init__.py  broker.py  data_generator.py  engine.py  price_loader.py  strategy.py
tests/: conftest.py  test_broker.py  test_data_generator.py  test_engine.py  test_models.py  test_price_loader.py  test_strategy.py
